fix: alignment in .places Improved alignment in grid along block axis: was "center", now "start".

--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,29 +1,29 @@
 .places {
-    box-sizing: border-box;
-    display: grid;
-    grid-template-columns: 1fr;
-    align-items: center;
-    justify-items: center;
-    gap: 48px;
-    margin: 0;
+	box-sizing: border-box;
+	display: grid;
+	grid-template-columns: 1fr;
+	align-items: start;
+	justify-items: center;
+	gap: 48px;
+	margin: 0;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
-    .places {
-        gap: calc(48px + (100vw - 320px) * (24 / 488));
-    }
+	.places {
+		gap: calc(48px + (100vw - 320px) * (24 / 488));
+	}
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-    .places {
-        padding: 0 var(--padding);
-        gap: calc(72px + (100vw - 320px) * (8 / 256));
-    }
+	.places {
+		padding: 0 var(--padding);
+		gap: calc(72px + (100vw - 320px) * (8 / 256));
+	}
 }
 
 @media screen and (min-width: 1024px) {
-    .places {
-        padding: 0 var(--padding);
-        gap: 80px;
-    }
+	.places {
+		padding: 0 var(--padding);
+		gap: 80px;
+	}
 }
